Bikin listener untuk load driver terdekat, pake limit 10Km sama di batasin setiap kecamatan 1300

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="upload">Upload</string>
     <string name="uploading">Uploading...</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="permissoin_location_require">Location Permission Require</string>
 </resources>
