Masih benerin getter n setter, coba cari tau dulu ttg getter n setter kotlin yang bener 2055

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="uploading">Uploading...</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="permissoin_location_require">Location Permission Require</string>
+    <string name="drivers_not_found">Drivers not found</string>
+    <string name="not_found_driver_key">Not found driver with key</string>
 </resources>
